examples/test/testpolicy1303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1303
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key35: value40
      key28: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value32
          key40: value29
      podSelector:
        matchLabels:
          key12: value36
